--- a/package.json
+++ b/package.json
@@ -3,26 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.24.0",
     "bootstrap": "5.1.3",
+    "clsx": "^1.1.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.5",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.3",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
-    "react-transition-group": "^4.4.2"
+    "react-transition-group": "^4.4.2",
+    "sass": "^1.43.4"
   },
   "scripts": {
     "start": "react-scripts start",
