--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "react-transition-group": "^4.4.2",
-    "sass": "^1.43.4"
+    "sass": "^1.43.4",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
