--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-slick": "^0.28.1",
     "react-transition-group": "^4.4.2",
     "sass": "^1.43.4",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
